--- a/_includes/head.html
+++ b/_includes/head.html
@@ -145,5 +145,7 @@
       {% include {{ file }} %}
     {% endfor %}
   {% endif %}
-
+  
+<link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
+  
 </head>
